--- a/src/components/organisms/LiveControlPanel.astro
+++ b/src/components/organisms/LiveControlPanel.astro
@@ -1,7 +1,7 @@
 ---
 // src/components/organisms/LiveControlPanel.astro
 import CyberButton from '../atoms/CyberButton.astro';
-import MarketBreadth from './MarketBreadth.astro';
+import MarketBreadth from '../molecules/MarketBreadth.astro';
 ---
 
 <div class="flex items-center gap-2 shrink-0 min-w-0">
